# eww-hyprbar

./: Cargo.toml  readme.md
.github/workflows/: ci-cd.yml  gh-release.yml
src/: lib.rs  main.rs  workspaces.rs
src/title/: icon_lookup.rs  mod.rs
