[package]
name = "eww-hyprbar"
version = "0.1.2"
edition = "2021"

[dependencies]
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs" }
arrayvec = { version = "0.7.4", features = ["serde"] }
serde = "1.0.163"
serde_json = "1.0.96"
freedesktop-icons = "0.2.3"
freedesktop-desktop-entry = "0.5.0"
clap = { version = "4.2.7", features = ["derive"] }
