[package]
name = "eww-hyprbar"
version = "0.1.2"
edition = "2021"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
opt-level = "s"

[dependencies]
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs" }
arrayvec = { version = "0.7.4", features = ["serde"] }
serde = "1.0.183"
serde_json = "1.0.99"
freedesktop-icons = "0.2.3"
freedesktop-desktop-entry = "0.5.0"
clap = { version = "4.3.8", features = ["derive"] }
